--- a/OmneFictio.Web/Views/Home/Index.cshtml
+++ b/OmneFictio.Web/Views/Home/Index.cshtml
@@ -27,19 +27,19 @@
     <div class="linkgroup_cont readingtime">
         <span>Reading Time</span>
         <div class="linkgroup">
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Story">
+            <a class="link_cont" href="/Read/Story">
                 <i class="bi bi-book-fill"></i>
                 <span>Story</span>
             </a>
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Scenario">
+            <a class="link_cont" href="/Read/Scenario">
                 <i class="bi bi-book-half"></i>
                 <span>Scenario</span>
             </a>
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Fanfiction">
+            <a class="link_cont" href="/Read/Fanfiction">
                 <i class="bi bi-book"></i>
                 <span>Fanfiction</span>
             </a>
-            <a class="link_cont" asp-controller="Home" asp-action="Read" asp-route-type="Plot">
+            <a class="link_cont" href="/Read/Plot">
                 <i class="bi bi-journal-text"></i>
                 <span>Plot</span>
             </a>
@@ -48,18 +48,18 @@
     <div class="linkgroup_cont aboutyou">
         <span>About You</span>
         <div class="linkgroup">
-            <div class="link_cont">
+            <a class="link_cont" href="/settings/library">
                 <i class="bi bi-collection"></i>
                 <span>Library</span>
-            </div>
-            <div class="link_cont">
+            </a>
+            <a class="link_cont" href="/settings/mystuff">
                 <i class="bi bi-archive"></i>
                 <span>My Stuff</span>
-            </div>
-            <div class="link_cont">
+            </a>
+            <a class="link_cont" href="/settings/history">
                 <i class="bi bi-clock-history"></i>
                 <span>History</span>
-            </div>
+            </a>
         </div>
     </div>
     <div class="linkgroup_cont misclinks">
@@ -76,14 +76,14 @@
                 <i class="bi bi-cart"></i>
                 <span>Shop</span>
             </div>
-            <div class="link_cont">
+            <a class="link_cont" href="/settings/customize">
                 <i class="bi bi-sliders2"></i>
                 <span>Customize</span>
-            </div>
-            <div class="link_cont">
+            </a>
+            <a class="link_cont" href="/settings">
                 <i class="bi bi-gear"></i>
                 <span>Settings</span>
-            </div>
+            </a>
             <div class="link_cont">
                 <i class="bi bi-newspaper"></i>
                 <span>News</span>
