--- a/OmneFictio.Web/wwwroot/css/settings.css
+++ b/OmneFictio.Web/wwwroot/css/settings.css
@@ -1,6 +1,6 @@
 main {
   display: flex;
-  gap: 20px;
+  gap: 6px;
   color: var(--text-color1);
   align-items: flex-start;
   padding-top: 8px;
@@ -33,13 +33,10 @@ nav .settings-goback a {
 nav .settings-goback a:hover {
   background-color: var(--goback-button-hover);
 }
-nav .settings-link_cont {
-  background-color: var(--background-color1);
-  border-radius: 8px;
-}
 nav .settings-link_cont .mobile_nav {
   display: flex;
   justify-content: space-around;
+  flex-wrap: wrap;
 }
 nav .settings-link_cont .mobile_nav a {
   padding: 10px;
@@ -50,30 +47,40 @@ nav .settings-link_cont .mobile_nav a i {
   justify-content: center;
   font-size: 2rem;
 }
-nav .settings-link_cont .mobile_nav a:first-child {
+nav .settings-link_cont .mobile_nav a.active {
   border-bottom: 1px solid #fff;
 }
-nav .settings-link_cont ul {
+nav .settings-link_cont .desktop_nav {
   display: none;
   width: 100%;
-  padding: 10px 0 30px;
+  background-color: var(--background-color1);
+  padding: 10px 0 20px;
+  border-radius: 8px;
 }
-nav .settings-link_cont ul li a {
+nav .settings-link_cont .desktop_nav li {
+  /*&:first-child a { border-radius: 8px 8px 0 0; }
+  &:last-child a { border-radius: 0 0 8px 8px; }*/
+}
+nav .settings-link_cont .desktop_nav li:last-child a {
+  border-bottom: unset;
+}
+nav .settings-link_cont .desktop_nav li a {
   cursor: pointer;
   padding: 7px 40px 7px 20px;
   font-size: 1.5rem;
   transition: all 0.2s ease 0s;
   border-bottom: 1px solid var(--background-color-hover1);
 }
-nav .settings-link_cont ul li a:hover {
-  background-color: var(--background-color-hover1);
+nav .settings-link_cont .desktop_nav li a:hover {
+  background-color: var(--settings-hovernav);
 }
-nav .settings-link_cont ul li a.active {
+nav .settings-link_cont .desktop_nav li a.active {
   background-color: var(--settings-activetab);
+  color: #fff;
 }
 
 .settings_body {
-  flex-grow: 1;
+  width: 100%;
   background-color: var(--background-color1);
   min-height: 600px;
   border-radius: 8px;
@@ -87,6 +94,7 @@ nav .settings-link_cont ul li a.active {
 .settings_body .s-friends .sf-header {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   gap: 10px;
   align-items: center;
   padding: 14px;
@@ -144,6 +152,7 @@ nav .settings-link_cont ul li a.active {
 .settings_body .s-friends .sf-list .sf-usercont {
   background-color: var(--background-color2);
   display: flex;
+  width: 100%;
 }
 .settings_body .s-friends .sf-list .sf-usercont .userpic {
   display: flex;
@@ -157,6 +166,7 @@ nav .settings-link_cont ul li a.active {
   height: 100%;
 }
 .settings_body .s-friends .sf-list .sf-usercont .username {
+  flex-grow: 1;
   display: flex;
   align-items: center;
   height: 100%;
@@ -164,12 +174,13 @@ nav .settings-link_cont ul li a.active {
   font-family: "Itim", cursive;
   font-size: 1.2rem;
   transition: 0.1s ease;
+  overflow: hidden;
 }
 .settings_body .s-friends .sf-list .sf-usercont .username a {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0 24px 0 10px;
+  padding: 0 10px;
 }
 .settings_body .s-friends .sf-list .sf-usercont .username a:hover {
   background-color: var(--background-color-hover1);
@@ -196,5 +207,21 @@ nav .settings-link_cont ul li a.active {
   }
   nav {
     width: unset;
+  }
+  nav .settings-link_cont .mobile_nav {
+    display: none;
+  }
+  nav .settings-link_cont .desktop_nav {
+    display: block;
+  }
+}
+@media (min-width: 992px) {
+  .settings_body .s-friends .sf-list .sf-usercont {
+    width: unset;
+  }
+}
+@media (max-width: 280px) {
+  .settings_body .s-friends .sf-list .sf-usercont .userpic {
+    display: none;
   }
 }/*# sourceMappingURL=settings.css.map */
