--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -64,6 +64,55 @@
         </div>
     </div>
 
+    <div class="s-profile_settings">
+        <div class="ps-row">
+            <div class="ps-cell">
+                <span>Display Name</span>
+                <input type="text">
+            </div>
+            <div class="ps-cell">
+                <span>Username</span>
+                <input type="text">
+            </div>
+        </div>
+        <div class="ps-row">
+            <div class="ps-cell">
+                <span>E-Mail</span>
+                <input type="text">
+            </div>
+            <div class="ps-cell">
+            </div>
+        </div>
+        <div class="ps-row">
+            <div class="ps-cell">
+                <span>Bio</span>
+                <textarea></textarea>
+            </div>
+            <div class="ps-cell">
+                <span>Profile picture</span>
+                <div class="ps-ppic_cont">
 
+                </div>
+            </div>
+        </div>
+        <div class="ps-row">
+            <h2 class="ps-preferences">Preferences</h2>
+        </div>
+        <div class="ps-row">
+            <div class="ps-cell">
+                <span>Rating</span>
+                <select>
+                    <option value="1">Everyone</option>
+                </select>
+            </div>
+            <div class="ps-cell">
+                <span>Language</span>
+                <select>
+                    <option value="0">None</option>
+                    <option value="1">English</option>
+                </select>
+            </div>
+        </div>
+    </div>
 
 </div>
