--- a/OmneFictio.Web/wwwroot/css/settings.scss
+++ b/OmneFictio.Web/wwwroot/css/settings.scss
@@ -246,7 +246,7 @@ nav{
         background-color: var(--background-color2);
         margin-bottom: 10px; //to align with textarea
     }
-    .ps-preferences, h2{
+    .ps-preferences{
         margin: 10px 0;
         padding-left: 16px;
         font-family: 'Josefin Sans', sans-serif;
