--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -47,6 +47,11 @@
         //settings
     --goback-button: #963a3a;
     --goback-button-hover: #a34a4a;
+            //profile settings
+            --revert-botton: #a02d2d;
+            --revert-botton-hover: #9f4e4e;
+            --save-botton: #247b31;
+            --save-botton-hover: #4c8d56;
     //----------
 
     --searchplaceholder-color: #939393;
@@ -99,6 +104,11 @@
         //settings
     --goback-button: #ec7373;
     --goback-button-hover: #e05050;
+            //profile settings
+            --revert-botton: #c46969;
+            --revert-botton-hover: #9f4e4e;
+            --save-botton: #61b96e;
+            --save-botton-hover: #4c9156;
     //----------
 
     //#bda952
