--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -68,17 +68,17 @@
         <div class="ps-row">
             <div class="ps-cell">
                 <span>Display Name</span>
-                <input type="text">
+                <input type="text" placeholder="Display name">
             </div>
             <div class="ps-cell">
                 <span>Username</span>
-                <input type="text">
+                <input type="text" placeholder="Username">
             </div>
         </div>
         <div class="ps-row">
             <div class="ps-cell">
                 <span>E-Mail</span>
-                <input type="text">
+                <input type="text" placeholder="E-Mail">
             </div>
             <div class="ps-cell">
             </div>
@@ -86,7 +86,7 @@
         <div class="ps-row">
             <div class="ps-cell">
                 <span>Bio</span>
-                <textarea></textarea>
+                <textarea placeholder="Bio"></textarea>
             </div>
             <div class="ps-cell">
                 <span>Profile picture</span>
@@ -98,12 +98,9 @@
         <div class="ps-row">
             <h2 class="ps-preferences">Preferences</h2>
         </div>
-        <div class="ps-row">
+        <div class="ps-row psr-preferences">
             <div class="ps-cell">
-                <span>Rating</span>
-                <select>
-                    <option value="1">Everyone</option>
-                </select>
+                <label>Allow adult content <input type="checkbox"></label>
             </div>
             <div class="ps-cell">
                 <span>Language</span>
@@ -112,6 +109,10 @@
                     <option value="1">English</option>
                 </select>
             </div>
+        </div>
+        <div class="ps-row psr-actions">
+            <button>Revert</button>
+            <button>Save</button>
         </div>
     </div>
 
