--- a/OmneFictio.Web/wwwroot/css/theme.css
+++ b/OmneFictio.Web/wwwroot/css/theme.css
@@ -38,6 +38,10 @@
   --replies-bgcolor: #424242;
   --goback-button: #963a3a;
   --goback-button-hover: #a34a4a;
+  --revert-botton: #a02d2d;
+  --revert-botton-hover: #9f4e4e;
+  --save-botton: #247b31;
+  --save-botton-hover: #4c8d56;
   --searchplaceholder-color: #939393;
 }
 
@@ -81,6 +85,10 @@
   --replies-bgcolor: #cfcfcf;
   --goback-button: #ec7373;
   --goback-button-hover: #e05050;
+  --revert-botton: #c46969;
+  --revert-botton-hover: #9f4e4e;
+  --save-botton: #61b96e;
+  --save-botton-hover: #4c9156;
 }
 
 /*
