swap between setting tabs without reload

--- a/OmneFictio.Web/wwwroot/css/settings.css
+++ b/OmneFictio.Web/wwwroot/css/settings.css
@@ -201,7 +201,7 @@ nav .settings-link_cont .desktop_nav li a.active {
 }
 
 .settings_body .s-profile_settings {
-  display: flex;
+  display: none;
   flex-direction: column;
   width: 100%;
   padding: 12px;
