--- a/OmneFictio.Web/wwwroot/css/settings.scss
+++ b/OmneFictio.Web/wwwroot/css/settings.scss
@@ -237,7 +237,7 @@ nav {
 }
 
 .settings_body .s-profile_settings {
-    display: flex;
+    display: none; //flex
     flex-direction: column;
     width: 100%;
     padding: 12px;
