--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -23,18 +23,18 @@
     </div>
     <div class="settings-link_cont">
         <div class="mobile_nav">
-            <a href="/settings/profile"><i class="bi bi-person"></i></a>
-            <a href="/settings/library"><i class="bi bi-collection"></i></a>
-            <a href="/settings/friends"><i class="bi bi-people"></i></a>
-            <a href="/settings"><i class="bi bi-gear"></i></a>
-            <a href="/settings/customize"><i class="bi bi-sliders2"></i></a>
+            <a data-href="/settings/profile"><i class="bi bi-person"></i></a>
+            <a data-href="/settings/library"><i class="bi bi-collection"></i></a>
+            <a data-href="/settings/friends"><i class="bi bi-people"></i></a>
+            <a data-href="/settings"><i class="bi bi-gear"></i></a>
+            <a data-href="/settings/customize"><i class="bi bi-sliders2"></i></a>
         </div>
         <ul class="desktop_nav">
-            <li><a href="/settings/profile">Profile</a></li>
-            <li><a href="/settings/library">Library</a></li>
-            <li><a href="/settings/friends">Friends</a></li>
-            <li><a href="/settings">Settings</a></li>
-            <li><a href="/settings/customize">Customize</a></li>
+            <li><a data-href="/settings/profile">Profile</a></li>
+            <li><a data-href="/settings/library">Library</a></li>
+            <li><a data-href="/settings/friends">Friends</a></li>
+            <li><a data-href="/settings">Settings</a></li>
+            <li><a data-href="/settings/customize">Customize</a></li>
         </ul>
     </div>
 </nav>
